--- a/src/App.css
+++ b/src/App.css
@@ -1,1 +1,20 @@
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
 
+img {
+  width: 100%;
+  height: 100%;
+}
+
+body {
+  background: rgb(168, 123, 195);
+  background: linear-gradient(
+    0deg,
+    rgba(168, 123, 195, 1) 0%,
+    rgba(41, 34, 96, 1) 100%
+  );
+  min-height: 100vh;
+}
