--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,4 @@
-* {
+/* * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
@@ -7,9 +7,9 @@
 img {
   width: 100%;
   height: 100%;
-}
+} */
 
-body {
+/* body {
   background: rgb(168, 123, 195);
   background: linear-gradient(
     0deg,
@@ -17,4 +17,4 @@ body {
     rgba(41, 34, 96, 1) 100%
   );
   min-height: 100vh;
-}
+} */
